correct return list for getAllTaxRatesList to use collect(Collectors.toList())